--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@
     display: inline-block;
     margin-left: 20px;
   }
-  .search-engine-optimization {
+  #search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -74,7 +74,7 @@
     color: #ffffff;
   }
   
-  .search-engine-optimization img {
+  #search-engine-optimization img {
     max-height: 200px;
   }
   
@@ -83,7 +83,7 @@
     margin-right: 25px;
   }
   
-  .search-engine-optimization h2 {
+  #search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
   }
